# sequencer-example-l2

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  cross-shell.nix  docker-compose.yaml  flake.nix  foundry.toml  justfile
.cargo/: audit.toml
.github/workflows/: build.yml  build_static.yml  lint.yml  update_nix.yml
contract-bindings/: Cargo.toml
contract-bindings/src/: address.rs  bn254.rs  erc1967_utils.rs  example_rollup.rs  example_rollup_test.rs  lib.rs  light_client.rs  light_client_state_update_vk.rs  plonk_verifier.rs  polynomial_eval.rs  shared_types.rs  storage_slot.rs  utils.rs
contracts/src/: ExampleRollup.sol
contracts/test/: ExampleRollup.t.sol
docker/: example-rollup.Dockerfile
src/: api.rs  error.rs  executor.rs  lib.rs  main.rs  prover.rs  seed.rs  state.rs  transaction.rs  utils.rs
