[package]
name = "example-l2"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.4", features = ["derive"] }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1", features = [
    "logging-utils",
] }
async-std = { version = "1.12", features = ["attributes"] }
clap = "4.4"
commit = { git = "https://github.com/EspressoSystems/commit" }
contract-bindings = { path = "./contract-bindings" }
derive_more = "0.99.17"
ethers = { version = "2.0.4", features = ["ws"] }
futures = "0.3.28"
hotshot-contract-bindings = { git = "https://github.com/EspressoSystems/espresso-sequencer.git", package = "contract-bindings" }
hotshot-query-service = { git = "https://github.com/EspressoSystems/hotshot-query-service", branch = "main" }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", features = [
    "std",
] }
rand = "0.8.5"
rand_chacha = "0.3"
sequencer = { git = "https://github.com/EspressoSystems/espresso-sequencer.git", features = ["testing"] }
sequencer-utils = { git = "https://github.com/EspressoSystems/espresso-sequencer.git" }
serde = "1.0.163"
serde_json = "1.0.100"
snafu = "0.7.4"
strum = "0.25.0"
strum_macros = "0.25.1"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.4.6" }
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.6" }
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
derivative = "2.2"
hotshot = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.8" }
portpicker = "0.1.1"
sequencer-utils = { git = "https://github.com/EspressoSystems/espresso-sequencer.git" }
tempfile = "3.7.1"
