[package]
name = "example-l2"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
ark-serialize = { version = "0.4", features = ["derive"] }
async-compatibility-layer = { version = "1.2.1", default-features = false, features = [
    "logging-utils",
] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
clap = { version = "4.4", features = ["derive", "env", "string"] }
committable = "0.2"
contract-bindings = { path = "./contract-bindings" }
derive_more = "0.99.17"
espresso_types = { git = "https://github.com/EspressoSystems/espresso-network", package = "espresso-types" }
ethers = { version = "2.0.4", features = ["ws"] }
futures = "0.3.28"
hotshot-contract-bindings = { git = "https://github.com/EspressoSystems/espresso-network", package = "contract-bindings-ethers" }
hotshot-query-service = { git = "https://github.com/EspressoSystems/espresso-network" }
jf_merkle_tree = { git = "https://github.com/EspressoSystems/jellyfish", package = "jf-merkle-tree" }
rand = "0.8.5"
rand_chacha = "0.3"
sequencer = { git = "https://github.com/EspressoSystems/espresso-network", features = ["testing"] }
sequencer-utils = { git = "https://github.com/EspressoSystems/espresso-network" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "^1.0.113"
snafu = "0.7.4"
strum = "0.25.0"
strum_macros = "0.25.1"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.9.0" }
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.9.3" }
tokio = "1.40.0"
toml = "0.8"
tracing = "0.1"
vec1 = "1.12.1"

[dev-dependencies]
derivative = "2.2"
# hotshot = { git = "https://github.com/EspressoSystems/espresso-network", features = ["dependency-tasks"] }
hotshot = { git = "https://github.com/EspressoSystems/espresso-network" }
hotshot-types = { git = "https://github.com/EspressoSystems/espresso-network", package = "hotshot-types" }
portpicker = "0.1.1"
sequencer-utils = { git = "https://github.com/EspressoSystems/espresso-network" }
tempfile = "3.10"
